# ti8m-workshop-hslu-agents

./: README.md  agent_runner.py  helper.py  initiate_agent_conversation.ipynb  pyproject.toml  requirements.txt
