[tool.poetry]
name = "hslu-workshop-agent-orchestrator"
version = "0.1.0"
description = "Display the conversation between a sales agent and a test cutomer"
authors = ["Patrick Frank <frk@ti8m.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.52.2"
python-dotenv = "^1.0.1"
pillow = "^11.0.0"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
